--- a/src/Velocity.Frontend/Velocity.Frontend.csproj
+++ b/src/Velocity.Frontend/Velocity.Frontend.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Blazor-ApexCharts" Version="2.1.0" />
       <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.13" />
       <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.13" />
       <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="7.0.96" />
